# nexus-terminal

./: .env.example  .eslintrc.js  .eslintrc.json  .gitignore  ADVANCED_FEATURES.md  ALPHA_0.4_RELEASE_NOTES.md  ALPHA_RELEASE_NOTES.md  ALPHA_RELEASE_SUMMARY.md  ALPHA_TESTERS_WANTED.md  ARCHITECTURE.md  App.tsx  CHANGELOG.md  CODE_ANALYSIS_REPORT.md  COMPLETE_REALISTIC_FEATURES_IMPLEMENTATION.md  COMPLETE_WARP_FEATURES_ANALYSIS.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_FIXES.md  COMPREHENSIVE_WARP_ENHANCEMENT_PLAN.md  CREDITS.md  DEEP_CODEBASE_ANALYSIS.md  DEVELOPMENT_STATUS.md  ENHANCED_FEATURES.md  ENHANCEMENT_ROADMAP.md  FEATURES.md  GIT_PUSH_NEEDED.txt  MOBILE_ALPHA_RELEASE_NOTES.md  PERFORMANCE_ANALYSIS.md  PROJECT_OUTLINE.md  README.md  RELEASE_NOTES.md  REVOLUTIONARY_BEYOND_WARP_VISION.md  REVOLUTIONARY_IMPLEMENTATION_ROADMAP.md  SETUP_ADVANCED.md  SYSTEM_INTEGRATION.md  TABBED_AGENT_IMPLEMENTATION.md  WARP_STYLE_TERMINAL_TABS.md  babel.config.js  backend_debug.md  debug_commands.md  index.html  (+11 more)
.github/workflows/: build-android.yml
android/: build.gradle  gradle.properties  gradlew
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/nexusterminal/: MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml  styles.xml
mobile-console/: package.json  tsconfig.json
mobile-console/src/: App.tsx
mobile-console/src/components/widgets/: NetworkIndicator.tsx  PerformanceChart.tsx  QuickActions.tsx  index.ts
mobile-console/src/navigation/: MainNavigator.tsx
mobile-console/src/screens/: AuthScreen.tsx  ConnectionScreen.tsx  DashboardScreen.tsx  EcosystemScreen.tsx  EnhancedDashboardScreen.tsx  EnhancedDashboardScreen_fixed.tsx  FilesScreen.tsx  SettingsScreen.tsx  SystemScreen.tsx  TerminalScreen.tsx
mobile-console/src/services/: ConnectionManager.ts  EnhancedConnectionManager.ts
mobile-console/src/store/: index.ts
mobile-console/src/store/slices/: connectionSlice.ts
src/: App.tsx  App.vue  env.d.ts  index.css  main.ts  main.tsx  scrollbar-override.css  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  ai_enhanced.rs  ai_optimized.rs  analytics.rs  broadcast.rs  cloud_integration.rs  collaboration.rs  command_flow.rs  config.rs  ecosystem_awareness.rs  git.rs  git_advanced.rs  git_advanced_backup.rs  intelligent_agent.rs  local_recall.rs  main.rs  ollama_config.rs  plugin_system.rs  security_scanner.rs  terminal.rs  utils.rs  vision.rs  vision_commands.rs  web_scraper.rs  workflow_automation.rs
src/components/: AIAssistant.tsx  AIAssistantPanel.vue  TerminalView.tsx  Toolbar.tsx
src/components/ai/: EnhancedAIAssistant.tsx  SimpleAIAssistant.tsx  ai-scrollbars.css
src/components/debug/: DebugOverlay.tsx
src/components/terminal/: AIAssistantPanel.tsx  NewTabModal.tsx  TerminalTabManager.tsx  TerminalWithAI.tsx  WarpStyleTerminal.tsx  WarpTabBar.tsx
src/components/ui/: AIControlBar.tsx
src/hooks/: useInputRouting.ts  useMemoryMonitor.ts
src/lib/: utils.ts
src/router/: index.ts
src/screens/: DashboardScreen.tsx  FilesScreen.tsx  LoginScreen.tsx  MainTabNavigator.tsx  SettingsScreen.tsx  SplashScreen.tsx  SystemScreen.tsx  TerminalScreen.tsx
src/services/: advancedFileService.ts  advancedMonitoringService.ts  advancedTerminalService.ts  aliasService.ts  authService.ts  autonomousSecurity.ts  cloudSyncService.ts  commandPreview.ts  commandRouting.ts  commandTemplates.ts  connectionService.ts  contextualSuggestions.ts  ecosystemService.ts  enterpriseIntegrationService.ts  enterpriseSecurityService.ts  fileService.ts  intelligentNotifications.ts  naturalLanguageTerminal.ts  neuralEngine.ts  performanceOptimizer.ts  productionDeploymentService.ts  ragService.ts  settingsService.ts  systemAutomationService.ts  systemService.ts  systemVisualization.ts  terminalBroadcasting.ts  terminalHealth.ts  terminalService.ts  test-routing-demo.ts  visionService.ts  webScraper.ts
src/services/__tests__/: commandRouting.test.ts
src/store/: authSlice.ts  connectionSlice.ts  ecosystemSlice.ts  filesSlice.ts  index.ts  systemSlice.ts  terminalSlice.ts
src/store/slices/: aiSlice.ts  terminalSlice.ts  terminalTabSlice.ts
src/stores/: ai.ts
src/types/: index.ts  terminal.ts
src/utils/: logger.ts  theme.ts
src/views/: TerminalView.vue
