[package]
name = "nexus-terminal"
version = "0.1.0"
description = "NexusTerminal - Where AI meets the command line. The intelligent terminal experience."
authors = ["wlfogle"]
license = "MIT"
repository = "https://github.com/wlfogle/nexus-terminal"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Core Tauri and serialization
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1.0"

# Computer Vision Dependencies
image = { version = "0.25", features = ["png", "jpeg"] }
screenshots = "0.8"
tesseract = "0.15"

# Utilities
base64 = "0.22"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
notify = "6.0"
async-trait = "0.1"
futures = "0.3"
crossbeam-channel = "0.5"

# Terminal and process management
portable-pty = "0.8"
shell-words = "1.1"

# AI/LLM Integration
ollama-rs = { version = "0.2", optional = true }

# Encryption and security
ring = "0.17"

# Config and settings
config = "0.14"
toml = "0.8"

# Git integration
git2 = "0.18"

# File system operations
walkdir = "2.0"
ignore = "0.4"

# Terminal utilities
crossterm = "0.27"
ratatui = "0.26"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
ollama = ["dep:ollama-rs"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
